Fixes alignment in explorer, request, tabs

--- a/src/colors.scss
+++ b/src/colors.scss
@@ -2,7 +2,7 @@
   --background: #b6b6b6;
   --background-preemph: #a1a1a1;
   --background-emphasis: #959494;
-  
+
   --text: #303337;
   --text-highlight: #353730;
   
@@ -32,5 +32,9 @@
     --button-background: #e7e7e2;
 
     --border: #babaf0;
+    
+    --tab: #67677b;
+    --tab-active: #a4a4b4;
+    --tab-background: #37373e;
   }
 }
